build: rename ci workflows to match the examples

--- a/.azure/example-8.yml
+++ b/.azure/example-8.yml
@@ -1,3 +1,4 @@
+name: example-8
 trigger: none
 
 variables:
@@ -7,8 +8,8 @@ variables:
     value: 'true'
 
 jobs:
-  - job: GitVersion_v6_cross_job
-    displayName: GitVersion v6 (cross job)
+  - job: GitVersion_v6_same_job
+    displayName: GitVersion v6 (same job)
     pool:
       vmImage: ubuntu-latest
     steps:
@@ -27,60 +28,42 @@ jobs:
           overrideConfig: |
             update-build-number=false
 
-  - job: GitVersion_v6_cross_job_consumer_without_prefix
-    displayName: GitVersion v6 (cross job consumer) - without prefix
-    dependsOn: GitVersion_v6_cross_job
-    condition: and(succeeded(), eq(dependencies.GitVersion_v6_cross_job.outputs['version_step.branchName'], 'main')) # use in condition
-    variables:
-      myvar_fullSemVer: $[ dependencies.GitVersion_v6_cross_job.outputs['version_step.fullSemVer'] ]
-    pool:
-      vmImage: ubuntu-latest
-    steps:
       - pwsh: |
-          echo "FullSemVer (myvar_fullSemVer)          : $(myvar_fullSemVer)"
-        displayName: Use mapped job variables (pwsh - outputs without prefix)
+          echo "FullSemVer (fullSemVer)            : $(fullSemVer)"
+        displayName: Display GitVersion variables (without prefix)
 
       - pwsh: |
-          echo "FullSemVer (env:localvar_fullSemVer)   : $env:localvar_fullSemVer"
-        displayName: Use mapped local env from job variables (pwsh - outputs without prefix)
-        env:
-          localvar_fullSemVer: $(myvar_fullSemVer)
-
-      - bash: |
-          echo "FullSemVer (myvar_fullSemVer)   : $(myvar_fullSemVer)"
-        displayName: Use mapped job variables (bash - outputs without prefix)
-
-      - bash: |
-          echo "FullSemVer (localvar_fullSemVer)   : $localvar_fullSemVer"
-        displayName: Use mapped local env from job variables (bash - outputs without prefix)
-        env:
-          localvar_fullSemVer: $(myvar_fullSemVer)
-
-  - job: GitVersion_v6_cross_job_consumer_with_prefix
-    displayName: GitVersion v6 (cross job consumer) - with prefix
-    dependsOn: GitVersion_v6_cross_job
-    condition: and(succeeded(), eq(dependencies.GitVersion_v6_cross_job.outputs['version_step.GitVersion_BranchName'], 'main')) # use in condition
-    variables:
-      myvar_GitVersion_FullSemVer: $[ dependencies.GitVersion_v6_cross_job.outputs['version_step.GitVersion_FullSemVer'] ]
-    pool:
-      vmImage: ubuntu-latest
-    steps:
-      - pwsh: |
-          echo "FullSemVer (myvar_GitVersion_FullSemVer)          : $(myvar_GitVersion_FullSemVer)"
-        displayName: Use mapped job variables (pwsh - outputs with prefix)
+          echo "FullSemVer (GitVersion_FullSemVer) : $(GitVersion_FullSemVer)"
+        displayName: Display GitVersion variables (with prefix)
 
       - pwsh: |
-          echo "FullSemVer (env:localvar_GitVersion_FullSemVer)   : $env:localvar_GitVersion_FullSemVer"
-        displayName: Use mapped local env from job variables (pwsh - outputs with prefix)
+          echo "FullSemVer (version_step.fullSemVer)            : $(version_step.fullSemVer)"
+        displayName: Display GitVersion outputs (step output without prefix)
+
+      - pwsh: |
+          echo "FullSemVer (version_step.GitVersion_FullSemVer) : $(version_step.GitVersion_FullSemVer)"
+        displayName: Display GitVersion outputs (step output with prefix)
+
+      - pwsh: |
+          echo "FullSemVer (env:myvar_fullSemVer) : $env:myvar_fullSemVer"
+        displayName: Display mapped local env (pwsh - outputs without prefix)
         env:
-          localvar_GitVersion_FullSemVer: $(myvar_GitVersion_FullSemVer)
+          myvar_fullSemVer: $(version_step.fullSemVer)
+
+      - pwsh: |
+          echo "FullSemVer (env:myvar_GitVersion_FullSemVer) : $env:myvar_GitVersion_FullSemVer"
+        displayName: Display mapped local env (pwsh - outputs with prefix)
+        env:
+          myvar_GitVersion_FullSemVer: $(version_step.GitVersion_FullSemVer)
 
       - bash: |
-          echo "FullSemVer (myvar_GitVersion_FullSemVer)   : $(myvar_GitVersion_FullSemVer)"
-        displayName: Use mapped job variables (bash - outputs with prefix)
+          echo "FullSemVer (myvar_fullSemVer) : $myvar_fullSemVer"
+        displayName: Display mapped local env (bash - outputs without prefix)
+        env:
+          myvar_fullSemVer: $(version_step.fullSemVer)
 
       - bash: |
-          echo "FullSemVer (localvar_GitVersion_FullSemVer)   : $localvar_GitVersion_FullSemVer"
-        displayName: Use mapped local env from job variables (bash - outputs with prefix)
+          echo "FullSemVer (myvar_GitVersion_FullSemVer) : $myvar_GitVersion_FullSemVer"
+        displayName: Display mapped local env (bash - outputs with prefix)
         env:
-          localvar_GitVersion_FullSemVer: $(myvar_GitVersion_FullSemVer)
+          myvar_GitVersion_FullSemVer: $(version_step.GitVersion_FullSemVer)
