--- a/.azure/example-9.yml
+++ b/.azure/example-9.yml
@@ -1,3 +1,4 @@
+name: example-9
 trigger: none
 
 variables:
@@ -6,88 +7,81 @@ variables:
   - name: DOTNET_CLI_TELEMETRY_OPTOUT
     value: 'true'
 
-stages:
-  - stage: GitVersion_v6_cross_stage
-    displayName: GitVersion v6 (cross stage)
-    jobs:
-      - job: GitVersion_v6_cross_stage_producer
-        displayName: GitVersion v6 (cross stage producer)
-        pool:
-          vmImage: ubuntu-latest
-        steps:
-          - checkout: self
-            fetchDepth: 0
+jobs:
+  - job: GitVersion_v6_cross_job
+    displayName: GitVersion v6 (cross job)
+    pool:
+      vmImage: ubuntu-latest
+    steps:
+      - checkout: self
+        fetchDepth: 0
 
-          - task: gitversion/setup@3.1.11
-            displayName: Install GitVersion
-            inputs:
-              versionSpec: '6.0.x'
+      - task: gitversion/setup@3.1.11
+        displayName: Install GitVersion
+        inputs:
+          versionSpec: '6.0.x'
 
-          - task: gitversion/execute@3.1.11
-            displayName: Determine Version
-            name: version_step # step id used as reference for output values
-            inputs:
-              overrideConfig: |
-                update-build-number=false
-  - stage: GitVersion_v6_cross_stage_consumer_without_prefix
-    displayName: GitVersion v6 (cross stage consumer) - without prefix
-    dependsOn: GitVersion_v6_cross_stage
-    condition: and(succeeded(), eq(dependencies.GitVersion_v6_cross_stage.outputs['GitVersion_v6_cross_stage_producer.version_step.branchName'], 'main')) # use in condition
-    jobs:
-      - job: GitVersion_v6_cross_stage_consumer_without_prefix
-        displayName: GitVersion v6 (cross stage consumer) - without prefix
-        variables:
-          myvar_fullSemVer: $[ stageDependencies.GitVersion_v6_cross_stage.GitVersion_v6_cross_stage_producer.outputs['version_step.fullSemVer'] ]
-        pool:
-          vmImage: ubuntu-latest
-        steps:
-          - pwsh: |
-              echo "FullSemVer (myvar_fullSemVer)          : $(myvar_fullSemVer)"
-            displayName: Use mapped job variables (pwsh - outputs without prefix)
+      - task: gitversion/execute@3.1.11
+        displayName: Determine Version
+        name: version_step # step id used as reference for output values
+        inputs:
+          overrideConfig: |
+            update-build-number=false
 
-          - pwsh: |
-              echo "FullSemVer (env:localvar_fullSemVer)   : $env:localvar_fullSemVer"
-            displayName: Use mapped local env from job variables (pwsh - outputs without prefix)
-            env:
-              localvar_fullSemVer: $(myvar_fullSemVer)
+  - job: GitVersion_v6_cross_job_consumer_without_prefix
+    displayName: GitVersion v6 (cross job consumer) - without prefix
+    dependsOn: GitVersion_v6_cross_job
+    condition: and(succeeded(), eq(dependencies.GitVersion_v6_cross_job.outputs['version_step.branchName'], 'main')) # use in condition
+    variables:
+      myvar_fullSemVer: $[ dependencies.GitVersion_v6_cross_job.outputs['version_step.fullSemVer'] ]
+    pool:
+      vmImage: ubuntu-latest
+    steps:
+      - pwsh: |
+          echo "FullSemVer (myvar_fullSemVer)          : $(myvar_fullSemVer)"
+        displayName: Use mapped job variables (pwsh - outputs without prefix)
 
-          - bash: |
-              echo "FullSemVer (myvar_fullSemVer)   : $(myvar_fullSemVer)"
-            displayName: Use mapped job variables (bash - outputs without prefix)
+      - pwsh: |
+          echo "FullSemVer (env:localvar_fullSemVer)   : $env:localvar_fullSemVer"
+        displayName: Use mapped local env from job variables (pwsh - outputs without prefix)
+        env:
+          localvar_fullSemVer: $(myvar_fullSemVer)
 
-          - bash: |
-              echo "FullSemVer (localvar_fullSemVer)   : $localvar_fullSemVer"
-            displayName: Use mapped local env from job variables (bash - outputs without prefix)
-            env:
-              localvar_fullSemVer: $(myvar_fullSemVer)
-  - stage: GitVersion_v6_cross_stage_consumer_with_prefix
-    displayName: GitVersion v6 (cross stage consumer) - with prefix
-    dependsOn: GitVersion_v6_cross_stage
-    condition: and(succeeded(), eq(dependencies.GitVersion_v6_cross_stage.outputs['GitVersion_v6_cross_stage_producer.version_step.GitVersion_BranchName'], 'main')) # use in condition
-    jobs:
-      - job: GitVersion_v6_cross_stage_consumer_with_prefix
-        displayName: GitVersion v6 (cross stage consumer) - with prefix
-        variables:
-          myvar_GitVersion_FullSemVer: $[ stageDependencies.GitVersion_v6_cross_stage.GitVersion_v6_cross_stage_producer.outputs['version_step.GitVersion_FullSemVer'] ]
-        pool:
-          vmImage: ubuntu-latest
-        steps:
-          - pwsh: |
-              echo "FullSemVer (myvar_GitVersion_FullSemVer)          : $(myvar_GitVersion_FullSemVer)"
-            displayName: Use mapped job variables (pwsh - outputs with prefix)
+      - bash: |
+          echo "FullSemVer (myvar_fullSemVer)   : $(myvar_fullSemVer)"
+        displayName: Use mapped job variables (bash - outputs without prefix)
 
-          - pwsh: |
-              echo "FullSemVer (env:localvar_GitVersion_FullSemVer)   : $env:localvar_GitVersion_FullSemVer"
-            displayName: Use mapped local env from job variables (pwsh - outputs with prefix)
-            env:
-              localvar_GitVersion_FullSemVer: $(myvar_GitVersion_FullSemVer)
+      - bash: |
+          echo "FullSemVer (localvar_fullSemVer)   : $localvar_fullSemVer"
+        displayName: Use mapped local env from job variables (bash - outputs without prefix)
+        env:
+          localvar_fullSemVer: $(myvar_fullSemVer)
 
-          - bash: |
-              echo "FullSemVer (localvar_GitVersion_FullSemVer)   : $localvar_GitVersion_FullSemVer"
-            displayName: Use mapped job variables (bash - outputs with prefix)
+  - job: GitVersion_v6_cross_job_consumer_with_prefix
+    displayName: GitVersion v6 (cross job consumer) - with prefix
+    dependsOn: GitVersion_v6_cross_job
+    condition: and(succeeded(), eq(dependencies.GitVersion_v6_cross_job.outputs['version_step.GitVersion_BranchName'], 'main')) # use in condition
+    variables:
+      myvar_GitVersion_FullSemVer: $[ dependencies.GitVersion_v6_cross_job.outputs['version_step.GitVersion_FullSemVer'] ]
+    pool:
+      vmImage: ubuntu-latest
+    steps:
+      - pwsh: |
+          echo "FullSemVer (myvar_GitVersion_FullSemVer)          : $(myvar_GitVersion_FullSemVer)"
+        displayName: Use mapped job variables (pwsh - outputs with prefix)
 
-          - bash: |
-              echo "FullSemVer (localvar_GitVersion_FullSemVer)   : $localvar_GitVersion_FullSemVer"
-            displayName: Use mapped local env from job variables (bash - outputs with prefix)
-            env:
-              localvar_GitVersion_FullSemVer: $(myvar_GitVersion_FullSemVer)
+      - pwsh: |
+          echo "FullSemVer (env:localvar_GitVersion_FullSemVer)   : $env:localvar_GitVersion_FullSemVer"
+        displayName: Use mapped local env from job variables (pwsh - outputs with prefix)
+        env:
+          localvar_GitVersion_FullSemVer: $(myvar_GitVersion_FullSemVer)
+
+      - bash: |
+          echo "FullSemVer (myvar_GitVersion_FullSemVer)   : $(myvar_GitVersion_FullSemVer)"
+        displayName: Use mapped job variables (bash - outputs with prefix)
+
+      - bash: |
+          echo "FullSemVer (localvar_GitVersion_FullSemVer)   : $localvar_GitVersion_FullSemVer"
+        displayName: Use mapped local env from job variables (bash - outputs with prefix)
+        env:
+          localvar_GitVersion_FullSemVer: $(myvar_GitVersion_FullSemVer)
