--- a/.github/workflows/example-8.yml
+++ b/.github/workflows/example-8.yml
@@ -7,15 +7,9 @@ defaults:
     shell: pwsh
 
 jobs:
-  GitVersion_v6_cross_job:
-    name: GitVersion v6 (cross job)
+  GitVersion_v6_same_job:
+    name: GitVersion v6 (same job)
     runs-on: ubuntu-latest
-    outputs:
-      branchName: ${{ steps.version_step.outputs.branchName }}
-      fullSemVer: ${{ steps.version_step.outputs.fullSemVer }}
-
-      GitVersion_BranchName: ${{ steps.version_step.outputs.GitVersion_BranchName }}
-      GitVersion_FullSemVer: ${{ steps.version_step.outputs.GitVersion_FullSemVer }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -31,114 +25,58 @@ jobs:
         id: version_step # step id used as reference for output values
         uses: gittools/actions/gitversion/execute@v3.1.11
 
-  GitVersion_v6_cross_job_consumer_without_prefix:
-    name: GitVersion v6 (cross job consumer) - without prefix
-    needs: GitVersion_v6_cross_job
-    runs-on: ubuntu-latest
-    if: contains(needs.GitVersion_v6_cross_job.outputs['branchName'], 'main')
-    env:
-      myvar_fullSemVer: ${{ needs.GitVersion_v6_cross_job.outputs.fullSemVer }}
-    steps:
       - run: |
-          echo "FullSemVer (env:myvar_fullSemVer)   : $env:myvar_fullSemVer"
-        name: Use job variables (pwsh - outputs without prefix)
-        shell: pwsh
+          echo "FullSemVer (env.fullSemVer)            : ${{ env.fullSemVer }}"
+        name: Display GitVersion variables (without prefix)
 
       - run: |
-          echo "FullSemVer (env:localvar_fullSemVer): $env:localvar_fullSemVer"
-        name: Use local env mapped from output (pwsh - outputs without prefix)
-        shell: pwsh
+          echo "FullSemVer (env.GitVersion_FullSemVer) : ${{ env.GitVersion_FullSemVer }}"
+        name: Display GitVersion variables (with prefix)
+
+      - run: |
+          echo "FullSemVer (steps.version_step.outputs.fullSemVer)            : ${{ steps.version_step.outputs.fullSemVer }}"
+        name: Display GitVersion outputs (step output without prefix)
+
+      - run: |
+          echo "FullSemVer (steps.version_step.outputs.GitVersion_FullSemVer) : ${{ steps.version_step.outputs.GitVersion_FullSemVer }}"
+        name: Display GitVersion outputs (step output with prefix)
+
+      - run: |
+          echo "FullSemVer (env.myvar_fullSemVer)            : ${{ env.myvar_fullSemVer }}"
+        name: Display mapped local env (outputs without prefix)
         env:
-          localvar_fullSemVer: ${{ needs.GitVersion_v6_cross_job.outputs.fullSemVer }}
+          myvar_fullSemVer: ${{ steps.version_step.outputs.fullSemVer }}
 
       - run: |
-          echo "FullSemVer (env:localvar_fullSemVer)   : $env:localvar_fullSemVer"
-        name: Use local env mapped from job variables (pwsh - outputs without prefix)
-        shell: pwsh
+          echo "FullSemVer (env.myvar_GitVersion_FullSemVer) : ${{ env.myvar_GitVersion_FullSemVer }}"
+        name: Display mapped local env (outputs with prefix)
         env:
-          localvar_fullSemVer: ${{ env.myvar_fullSemVer }}
+          myvar_GitVersion_FullSemVer: ${{ steps.version_step.outputs.GitVersion_FullSemVer }}
 
       - run: |
-          echo "FullSemVer (needs.GitVersion_v6_cross_job.outputs.fullSemVer) : ${{ needs.GitVersion_v6_cross_job.outputs.fullSemVer }}"
-        name: Use direct output from previous job (pwsh - outputs without prefix)
-        shell: pwsh
-
-      - run: |
-          echo "FullSemVer (myvar_fullSemVer)   : $myvar_fullSemVer"
-        name: Use job variables (bash - outputs without prefix)
-        shell: bash
-
-      - run: |
-          echo "FullSemVer (localvar_fullSemVer): $localvar_fullSemVer"
-        name: Use local env mapped from output (bash - outputs without prefix)
-        shell: bash
-        env:
-          localvar_fullSemVer: ${{ needs.GitVersion_v6_cross_job.outputs.fullSemVer }}
-
-      - run: |
-          echo "FullSemVer (localvar_fullSemVer)   : $localvar_fullSemVer"
-        name: Use local env mapped from job variables (bash - outputs without prefix)
-        shell: bash
-        env:
-          localvar_fullSemVer: ${{ env.myvar_fullSemVer }}
-
-      - run: |
-          echo "FullSemVer (needs.GitVersion_v6_cross_job.outputs.fullSemVer) : ${{ needs.GitVersion_v6_cross_job.outputs.fullSemVer }}"
-        name: Use direct output from previous job (bash - outputs without prefix)
-        shell: bash
-
-  GitVersion_v6_cross_job_consumer_with_prefix:
-    name: GitVersion v6 (cross job consumer) - with prefix
-    needs: GitVersion_v6_cross_job
-    runs-on: ubuntu-latest
-    if: contains(needs.GitVersion_v6_cross_job.outputs['GitVersion_BranchName'], 'main')
-    env:
-      myvar_GitVersion_FullSemVer: ${{ needs.GitVersion_v6_cross_job.outputs.GitVersion_FullSemVer }}
-    steps:
-      - run: |
-          echo "FullSemVer (env:myvar_GitVersion_FullSemVer)   : $env:myvar_GitVersion_FullSemVer"
-        name: Use job variables (pwsh - outputs without prefix)
-        shell: pwsh
-
-      - run: |
-          echo "FullSemVer (env:localvar_fullSemVer): $env:localvar_fullSemVer"
-        name: Use local env mapped from output (pwsh - outputs without prefix)
+          echo "FullSemVer (env.myvar_fullSemVer)            : $env:myvar_fullSemVer"
+        name: Display mapped local env (pwsh - outputs without prefix)
         shell: pwsh
         env:
-          localvar_fullSemVer: ${{ needs.GitVersion_v6_cross_job.outputs.GitVersion_FullSemVer }}
+          myvar_fullSemVer: ${{ steps.version_step.outputs.fullSemVer }}
 
       - run: |
-          echo "FullSemVer (env:localvar_fullSemVer)   : $env:localvar_fullSemVer"
-        name: Use local env mapped from job variables (pwsh - outputs without prefix)
+          echo "FullSemVer (env.myvar_GitVersion_FullSemVer) : $env:myvar_GitVersion_FullSemVer"
+        name: Display mapped local env (pwsh - outputs with prefix)
         shell: pwsh
         env:
-          localvar_fullSemVer: ${{ env.myvar_GitVersion_FullSemVer }}
+          myvar_GitVersion_FullSemVer: ${{ steps.version_step.outputs.GitVersion_FullSemVer }}
 
       - run: |
-          echo "FullSemVer (needs.GitVersion_v6_cross_job.outputs.GitVersion_FullSemVer) : ${{ needs.GitVersion_v6_cross_job.outputs.GitVersion_FullSemVer }}"
-        name: Use direct output from previous job (pwsh - outputs without prefix)
-        shell: pwsh
-
-      - run: |
-          echo "FullSemVer (myvar_GitVersion_FullSemVer)   : $myvar_GitVersion_FullSemVer"
-        name: Use job variables (bash - outputs without prefix)
-        shell: bash
-
-      - run: |
-          echo "FullSemVer (localvar_fullSemVer): $localvar_fullSemVer"
-        name: Use local env mapped from output (bash - outputs without prefix)
+          echo "FullSemVer (myvar_fullSemVer)            : $myvar_fullSemVer"
+        name: Display mapped local env (bash - outputs without prefix)
         shell: bash
         env:
-          localvar_fullSemVer: ${{ needs.GitVersion_v6_cross_job.outputs.GitVersion_FullSemVer }}
+          myvar_fullSemVer: ${{ steps.version_step.outputs.fullSemVer }}
 
       - run: |
-          echo "FullSemVer (localvar_fullSemVer)   : $localvar_fullSemVer"
-        name: Use local env mapped from job variables (bash - outputs without prefix)
+          echo "FullSemVer (myvar_GitVersion_FullSemVer) : $myvar_GitVersion_FullSemVer"
+        name: Display mapped local env (bash - outputs with prefix)
         shell: bash
         env:
-          localvar_fullSemVer: ${{ env.myvar_GitVersion_FullSemVer }}
-
-      - run: |
-          echo "FullSemVer (needs.GitVersion_v6_cross_job.outputs.GitVersion_FullSemVer) : ${{ needs.GitVersion_v6_cross_job.outputs.GitVersion_FullSemVer }}"
-        name: Use direct output from previous job (bash - outputs without prefix)
-        shell: bash
+          myvar_GitVersion_FullSemVer: ${{ steps.version_step.outputs.GitVersion_FullSemVer }}
