use specific runner versions

--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -26,12 +26,12 @@ jobs:
   displayName: ''
   strategy:
     matrix:
-      'ubuntu-latest':
-        imageName: 'ubuntu-latest'
-      'macos-latest':
+      'ubuntu-24.04':
+        imageName: 'ubuntu-24.04'
+      'macos-15':
         imageName: 'macos-15'
-      'windows-latest':
-        imageName: 'windows-latest'
+      'windows-2025':
+        imageName: 'windows-2025'
 
   pool:
     vmImage: $(imageName)
