--- a/.azure/example-10.yml
+++ b/.azure/example-10.yml
@@ -14,7 +14,7 @@ stages:
       - job: GitVersion_v6_cross_stage_producer
         displayName: GitVersion v6 (cross stage producer)
         pool:
-          vmImage: ubuntu-latest
+          vmImage: ubuntu-24.04
         steps:
           - checkout: self
             fetchDepth: 0
@@ -40,7 +40,7 @@ stages:
         variables:
           myvar_fullSemVer: $[ stageDependencies.GitVersion_v6_cross_stage.GitVersion_v6_cross_stage_producer.outputs['version_step.fullSemVer'] ]
         pool:
-          vmImage: ubuntu-latest
+          vmImage: ubuntu-24.04
         steps:
           - pwsh: |
               echo "FullSemVer (myvar_fullSemVer)          : $(myvar_fullSemVer)"
@@ -71,7 +71,7 @@ stages:
         variables:
           myvar_GitVersion_FullSemVer: $[ stageDependencies.GitVersion_v6_cross_stage.GitVersion_v6_cross_stage_producer.outputs['version_step.GitVersion_FullSemVer'] ]
         pool:
-          vmImage: ubuntu-latest
+          vmImage: ubuntu-24.04
         steps:
           - pwsh: |
               echo "FullSemVer (myvar_GitVersion_FullSemVer)          : $(myvar_GitVersion_FullSemVer)"
