--- a/.azure/example-8.yml
+++ b/.azure/example-8.yml
@@ -11,7 +11,7 @@ jobs:
   - job: GitVersion_v6_same_job
     displayName: GitVersion v6 (same job)
     pool:
-      vmImage: ubuntu-latest
+      vmImage: ubuntu-24.04
     steps:
       - checkout: self
         fetchDepth: 0
