--- a/.azure/example-9.yml
+++ b/.azure/example-9.yml
@@ -11,7 +11,7 @@ jobs:
   - job: GitVersion_v6_cross_job
     displayName: GitVersion v6 (cross job)
     pool:
-      vmImage: ubuntu-latest
+      vmImage: ubuntu-24.04
     steps:
       - checkout: self
         fetchDepth: 0
@@ -35,7 +35,7 @@ jobs:
     variables:
       myvar_fullSemVer: $[ dependencies.GitVersion_v6_cross_job.outputs['version_step.fullSemVer'] ]
     pool:
-      vmImage: ubuntu-latest
+      vmImage: ubuntu-24.04
     steps:
       - pwsh: |
           echo "FullSemVer (myvar_fullSemVer)          : $(myvar_fullSemVer)"
@@ -64,7 +64,7 @@ jobs:
     variables:
       myvar_GitVersion_FullSemVer: $[ dependencies.GitVersion_v6_cross_job.outputs['version_step.GitVersion_FullSemVer'] ]
     pool:
-      vmImage: ubuntu-latest
+      vmImage: ubuntu-24.04
     steps:
       - pwsh: |
           echo "FullSemVer (myvar_GitVersion_FullSemVer)          : $(myvar_GitVersion_FullSemVer)"
