--- a/.github/workflows/checkout-path.yml
+++ b/.github/workflows/checkout-path.yml
@@ -17,7 +17,7 @@ defaults:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
