--- a/.github/workflows/example-9.yml
+++ b/.github/workflows/example-9.yml
@@ -9,7 +9,7 @@ defaults:
 jobs:
   GitVersion_v6_cross_job:
     name: GitVersion v6 (cross job)
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     outputs:
       branchName: ${{ steps.version_step.outputs.branchName }}
       fullSemVer: ${{ steps.version_step.outputs.fullSemVer }}
@@ -34,7 +34,7 @@ jobs:
   GitVersion_v6_cross_job_consumer_without_prefix:
     name: GitVersion v6 (cross job consumer) - without prefix
     needs: GitVersion_v6_cross_job
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     if: contains(needs.GitVersion_v6_cross_job.outputs['branchName'], 'main')
     env:
       myvar_fullSemVer: ${{ needs.GitVersion_v6_cross_job.outputs.fullSemVer }}
@@ -90,7 +90,7 @@ jobs:
   GitVersion_v6_cross_job_consumer_with_prefix:
     name: GitVersion v6 (cross job consumer) - with prefix
     needs: GitVersion_v6_cross_job
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     if: contains(needs.GitVersion_v6_cross_job.outputs['GitVersion_BranchName'], 'main')
     env:
       myvar_GitVersion_FullSemVer: ${{ needs.GitVersion_v6_cross_job.outputs.GitVersion_FullSemVer }}
