Ensures test results are always published
Configures test result publishing to always execute, even if tests fail.
This ensures that test results are available for analysis regardless of the test outcome.

--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -58,9 +58,11 @@ jobs:
         npm run test:ci
       displayName: 'Run tests'
     - task: PublishTestResults@2
+      condition: always()
       inputs:
         testResultsFormat: 'JUnit'
         testResultsFiles: 'junit-report.xml'
+        searchFolder: '$(System.DefaultWorkingDirectory)'
       displayName: 'Test Summary'
     - pwsh: |
         # set the inputs for the 'gitversion/setup' action
