Normalizes target path in dotnet tool
Ensures the target path for dotnet tools is properly normalized.

- Adds `targetPath` to GitVersion command tasks in CI workflow
- Resolves relative paths to absolute paths
- Normalizes the directory separator for consistency.

This prevents issues caused by inconsistent path formats,
especially on different operating systems.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,10 +60,12 @@ jobs:
     - name: gitversion/command (showvariable)
       uses: ./gitversion/command
       with:
+        targetPath: './'
         arguments: '/showvariable FullSemVer'
     - name: gitversion/command (format)
       uses: ./gitversion/command
       with:
+        targetPath: './'
         arguments: '/format {Major}.{Minor}'
     - name: gitversion/execute
       id: gitversion # step id used as reference for output values
