added vnext branch trigger

--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -1,10 +1,12 @@
 trigger:
   - main
+  - vnext
   - 'fix/*'
   - 'feature/*'
 
 pr:
   - main
+  - vnext
 
 variables:
   - group: gittools-actions
