Corrects grammar in comments
Corrects the grammar in the comments related to the `version_step` id within various workflow files and documentation to use "a reference" instead of "reference".

--- a/.azure/example-10.yml
+++ b/.azure/example-10.yml
@@ -26,7 +26,7 @@ stages:
 
           - task: gitversion/execute@3.2.0
             displayName: Determine Version
-            name: version_step # step id used as reference for output values
+            name: version_step # step id used as a reference for output values
             inputs:
               overrideConfig: |
                 update-build-number=false
