--- a/.azure/example-8.yml
+++ b/.azure/example-8.yml
@@ -23,7 +23,7 @@ jobs:
 
       - task: gitversion/execute@3.2.0
         displayName: Determine Version
-        name: version_step # step id used as reference for output values
+        name: version_step # step id used as a reference for output values
         inputs:
           overrideConfig: |
             update-build-number=false
