--- a/.github/workflows/example-8.yml
+++ b/.github/workflows/example-8.yml
@@ -22,7 +22,7 @@ jobs:
           versionSpec: '6.3.x'
 
       - name: Determine Version
-        id: version_step # step id used as reference for output values
+        id: version_step # step id used as a reference for output values
         uses: gittools/actions/gitversion/execute@v3.2.0
 
       - run: |
