--- a/.github/workflows/example-9.yml
+++ b/.github/workflows/example-9.yml
@@ -28,7 +28,7 @@ jobs:
           versionSpec: '6.3.x'
 
       - name: Determine Version
-        id: version_step # step id used as reference for output values
+        id: version_step # step id used as a reference for output values
         uses: gittools/actions/gitversion/execute@v3.2.0
 
   GitVersion_v6_cross_job_consumer_without_prefix:
