Configures build number format.
Sets the build number format to include the major, minor, and patch versions.
This ensures consistent and informative build versioning.

--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -100,6 +100,7 @@ jobs:
         $env:INPUT_TARGETPATH = './'
         $env:INPUT_DISABLECACHE = 'true'
         $env:INPUT_DISABLENORMALIZATION = 'false'
+        $env:INPUT_BUILDNUMBERFORMAT = 'v${GitVersion_MajorMinorPatch}'
         $env:INPUT_OVERRIDECONFIG = '
           semantic-version-format=Loose'
 
