Updates dependabot schedule to cron
Changes the dependabot update schedule from daily to a cron job, enabling more precise control over when updates are triggered.
This is part of the vnext work in progress.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,10 +7,12 @@ updates:
     prefix: "(github-actions)"
   directory: "/"
   schedule:
-    interval: daily
+    interval: cron
+    cronjob: "0 12 * * *"
   ignore:
     - dependency-name: "gittools/actions/gitversion/setup"
     - dependency-name: "gittools/actions/gitversion/execute"
+    - dependency-name: "gittools/actions/gitversion/command"
 
 - package-ecosystem: npm
   labels:
@@ -38,5 +40,6 @@ updates:
         - "@types/*"
   directory: "/"
   schedule:
-    interval: daily
+    interval: cron
+    cronjob: "0 12 * * *"
   open-pull-requests-limit: 10
