--- a/gitversion/setup/action.yml
+++ b/gitversion/setup/action.yml
@@ -17,6 +17,10 @@ inputs:
     description: Include pre-release versions when matching a version
     required: false
     default: 'false'
+  packageSource:
+    description: The source to fetch the package from
+    required: false
+    default: https://azuresearch-usnc.nuget.org
   ignoreFailedSources:
     description: Treat package source failures as warnings.
     required: false
