Include packagesource as environment variable in azure ci action

--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -18,6 +18,8 @@ variables:
     value: '6.3.x'
   - name: INPUT_INCLUDEPRERELEASE
     value: 'false'
+  - name: INPUT_PACKAGESOURCE
+    value: 'https://azuresearch-usnc.nuget.org'
   - name: INPUT_IGNOREFAILEDSOURCES
     value: 'true'
   - name: INPUT_PREFERLATESTVERSION
@@ -70,6 +72,7 @@ jobs:
         # set the inputs for the 'gitversion/setup' action
         $env:INPUT_VERSIONSPEC = "$(INPUT_VERSIONSPEC)"
         $env:INPUT_INCLUDEPRERELEASE = "$(INPUT_INCLUDEPRERELEASE)"
+        $env:INPUT_PACKAGESOURCE = "$(INPUT_PACKAGESOURCE)"
         $env:INPUT_IGNOREFAILEDSOURCES = "$(INPUT_IGNOREFAILEDSOURCES)"
         $env:INPUT_PREFERLATESTVERSION = "$(INPUT_PREFERLATESTVERSION)"
 
