Check in another saved file.

--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -19,7 +19,7 @@ variables:
   - name: INPUT_INCLUDEPRERELEASE
     value: 'false'
   - name: INPUT_PACKAGESOURCE
-    value: 'https://azuresearch-usnc.nuget.org'
+    value: 'https://azuresearch-usnc.nuget.org/query'
   - name: INPUT_IGNOREFAILEDSOURCES
     value: 'true'
   - name: INPUT_PREFERLATESTVERSION
