updates azure tasks and fixes date format
Updates azure tasks with new agent version and friendly name suffix.

Corrects the date format used for versioning to include minutes and truncates it to the first 9 characters to maintain consistency.

Changes configFilePath type to string.

updates task names in documentation

--- a/.github/actions/publish-azure/action.yml
+++ b/.github/actions/publish-azure/action.yml
@@ -29,7 +29,7 @@ runs:
         id: publish-azure
         shell: pwsh
         run: |
-          $date = Get-Date -format "yyMMddHH"
+          $date = (Get-Date -format "yyMMddHHmm").Substring(0, 9)
           $mode = "${{ inputs.mode }}"
           $major = "${{ inputs.major }}"
           $minor = "${{ inputs.minor }}"
