--- a/.azure/output-example-2.yml
+++ b/.azure/output-example-2.yml
@@ -16,12 +16,12 @@ jobs:
       - checkout: self
         fetchDepth: 0
 
-      - task: gitversion/setup@4.1.0
+      - task: gittools.gittools.setup-gitversion-task.gitversion-setup@4.1.0
         displayName: Install GitVersion
         inputs:
           versionSpec: '6.3.x'
 
-      - task: gitversion/execute@4.1.0
+      - task: gittools.gittools.execute-gitversion-task.gitversion-execute@4.1.0
         displayName: Determine Version
         name: version_step # step id used as a reference for output values
         inputs:
