--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+
 #dist
 dist-ssr
 *.local
@@ -35,3 +36,6 @@ dist-ssr
 junit-report.xml
 
 src/__tests__/test.env
+
+# Unit test files
+test.env
