--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,8 +110,8 @@ jobs:
     - name: Rebuild dist and push
       run: |
         git add --verbose .
-        git config user.name 'Artur Stolear'
-        git config user.email 'artur.stolear@gmail.com'
+        git config user.name 'gittools-bot'
+        git config user.email 'gittoolsbot@outlook.com'
         git commit -m 'dist update' --allow-empty
         git push --force
       if: steps.status.outputs.has_changes == '1'
