--- a/.github/workflows/examples-version.yml
+++ b/.github/workflows/examples-version.yml
@@ -29,8 +29,8 @@ jobs:
           dir -r .azure\**\*.yml | % { update-md-files $_ -OldVersion $oldTag -NewVersion $newTag }
 
           git add --verbose .
-          git config user.name 'Artur Stolear'
-          git config user.email 'artur.stolear@gmail.com'
+          git config user.name 'gittools-bot'
+          git config user.email 'gittoolsbot@outlook.com'
           git commit -m "update examples version to $newTag" --allow-empty
           git push --force
         name: Update examples version
