--- a/.github/workflows/examples-version.yml
+++ b/.github/workflows/examples-version.yml
@@ -23,10 +23,10 @@ jobs:
           $newTag = "${{ github.event.client_payload.newTag }}"
 
           . .\update-version.ps1 # Import the functions
-          dir -r .\package.json | % { update-md-files $_ -OldVersion $oldTag -NewVersion $newTag }
-          dir -r .\docs\**\*.md | % { update-md-files $_ -OldVersion $oldTag -NewVersion $newTag }
-          dir -r .github\**\*.yml | % { update-md-files $_ -OldVersion $oldTag -NewVersion $newTag }
-          dir -r .azure\**\*.yml | % { update-md-files $_ -OldVersion $oldTag -NewVersion $newTag }
+          dir -r .\package.json   | % { update-files $_ -OldVersion $oldTag -NewVersion $newTag }
+          dir -r .\docs\**\*.md   | % { update-files $_ -OldVersion $oldTag -NewVersion $newTag }
+          dir -r .github\**\*.yml | % { update-files $_ -OldVersion $oldTag -NewVersion $newTag }
+          dir -r .azure\**\*.yml  | % { update-files $_ -OldVersion $oldTag -NewVersion $newTag }
 
           git add --verbose .
           git config user.name 'gittools-bot'
