--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "baseUrl": "./src",
-    "lib": ["ESNext"],
-    "target": "ESNext",
-    "module": "ESNext",
+    "lib": ["ES2020"],
+    "target": "ES2022",
+    "module": "ES2022",
     "moduleResolution": "bundler",
     "useDefineForClassFields": true,
     "types": ["node", "vite/client"],
