--- a/package.json
+++ b/package.json
@@ -47,34 +47,37 @@
     "prepare": "husky"
   },
   "devDependencies": {
-    "@eslint/js": "^10.0.1",
-    "@stylistic/eslint-plugin": "^5.9.0",
-    "@types/eslint__js": "^9.14.0",
-    "@types/node": "^25.3.0",
-    "@types/semver": "^7.7.1",
-    "@vitest/eslint-plugin": "^1.4.0",
-    "dotenv": "^17.2.3",
-    "eslint": "^10.0.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
-    "glob": "^13.0.5",
-    "globals": "^17.3.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.2.6",
-    "markdownlint-cli": "^0.47.0",
-    "npm-run-all2": "^8.0.4",
-    "prettier": "^3.6.2",
-    "simple-git": "^3.30.0",
-    "tfx-cli": "^0.23.1",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.2",
-    "vite": "^7.1.12",
-    "vite-node": "^5.3.0",
-    "vite-tsconfig-paths": "^6.1.1",
-    "vitest": "^4.0.6"
+    "@eslint/js": "10.0.1",
+    "@stylistic/eslint-plugin": "5.9.0",
+    "@types/eslint__js": "9.14.0",
+    "@types/node": "25.3.0",
+    "@types/semver": "7.7.1",
+    "@vitest/eslint-plugin": "1.6.9",
+    "dotenv": "17.3.1",
+    "eslint": "10.0.0",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-prettier": "5.5.5",
+    "glob": "13.0.5",
+    "globals": "17.3.0",
+    "husky": "9.1.7",
+    "lint-staged": "16.2.7",
+    "markdownlint-cli": "0.47.0",
+    "npm-run-all2": "8.0.4",
+    "prettier": "3.8.1",
+    "simple-git": "3.31.1",
+    "tfx-cli": "0.23.1",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.56.0",
+    "vite": "7.3.1",
+    "vite-node": "5.3.0",
+    "vite-tsconfig-paths": "6.1.1",
+    "vitest": "4.0.18"
   },
   "dependencies": {
-    "semver": "^7.7.3"
+    "semver": "7.7.4"
+  },
+  "overrides": {
+    "minimatch": "10.2.1"
   },
   "lint-staged": {
     "*.ts": ["eslint --fix", "prettier --write"],
