chore(package): Add MIT license, simplify project config
Simplify Node.js engine version requirement and remove redundant module field.

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "type": "git",
     "url": "https://github.com/GitTools/actions.git"
   },
+  "license": "MIT",
   "type": "module",
-  "module": "ES2022",
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=20"
   },
   "scripts": {
     "build": "run-p build:tools build:agents",
