ci(publish-azure): Use UTC for versioning date
Standardize date component in version string to UTC for consistent builds.

--- a/.github/actions/publish-azure/action.yml
+++ b/.github/actions/publish-azure/action.yml
@@ -34,7 +34,7 @@ runs:
           $minor = "${{ inputs.minor }}"
           $patch = "${{ inputs.patch }}"
 
-          $date = (Get-Date -format "yyMMddHHmm").Substring(0, 9)
+          $date = ([datetime]::UtcNow.ToString("yyMMddHHmm")).Substring(0, 9)
           $version = "$major.$minor.$patch.$date"
           $vsix = "dist/gittools.gittools-$version.vsix"
 
