refactor(ci): Rename versioning script
Renames `update-version.ps1` to `utilities.ps1` and updates the GitHub Actions workflow to import the new script.

--- a/.github/workflows/examples-version.yml
+++ b/.github/workflows/examples-version.yml
@@ -22,7 +22,7 @@ jobs:
           $oldTag = "${{ github.event.client_payload.oldTag }}"
           $newTag = "${{ github.event.client_payload.newTag }}"
 
-          . .\update-version.ps1 # Import the functions
+          . .\utilities.ps1 # Import the functions
           dir -r .\package.json   | % { update-files $_ -OldVersion $oldTag -NewVersion $newTag }
           dir -r .\docs\**\*.md   | % { update-files $_ -OldVersion $oldTag -NewVersion $newTag }
           dir -r .github\**\*.yml | % { update-files $_ -OldVersion $oldTag -NewVersion $newTag }
