--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,11 @@ jobs:
       with:
         app-id: ${{ secrets.GITTOOLS_BOT_APP_ID }}
         private-key: ${{ secrets.GITTOOLS_BOT_APP_PRIVATE_KEY }}
+        permission-actions: write
+        permission-contents: write
+        permission-workflows: write
+        permission-members: read
+        permission-metadata: read
     - uses: actions/checkout@v6
       if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
       with:
