refactor(build): Modernize TypeScript target and CI processes
Update TypeScript compilation target to ES2022 and refactor code with optional chaining for conciseness. Optimize CI dependency installation by ignoring scripts and passing workflow inputs via environment variables.

--- a/.github/actions/publish-azure/action.yml
+++ b/.github/actions/publish-azure/action.yml
@@ -28,7 +28,13 @@ runs:
     -   name: Publish Azure extension
         id: publish-azure
         shell: pwsh
+        env:
+          MODE: ${{ inputs.mode }}
+          MAJOR: ${{ inputs.major }}
+          MINOR: ${{ inputs.minor }}
+          PATCH: ${{ inputs.patch }}
+          TFX_TOKEN: ${{ inputs.token }}
         run: |
           . .\utilities.ps1 # Import the functions
 
-          publish-vsix  -mode ${{ inputs.mode }} -token ${{ inputs.token }} -major ${{ inputs.major }} -minor ${{ inputs.minor }} -patch ${{ inputs.patch }}
+          publish-vsix -mode $env.MODE -token $env.TFX_TOKEN -major $env.MAJOR -minor $env.MINOR -patch $env.PATCH
