--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
       with:
         fetch-depth: 0
     - run: |
-        npm install
+        npm install --ignore-scripts
       name: Install dependencies
     - run: |
         npm run lint:check && npm run format:check && npm run mdlint:check
