--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -51,10 +51,16 @@ jobs:
           minor: ${{ steps.gitversion.outputs.minor }}
           patch: ${{ steps.gitversion.outputs.patch }}
           token: ${{ secrets.TFX_TOKEN }}
+      - name: Generate GitHub App Release Token
+        id: release-token
+        uses: ./.github/actions/create-release-token
+        with:
+          app-id: ${{ secrets.GITTOOLS_BOT_APP_ID }}
+          private-key: ${{ secrets.GITTOOLS_BOT_APP_PRIVATE_KEY }}
       - name: Trigger Update Examples version (actions-test)
         id: get-tags
         uses: ./.github/actions/trigger-action-test
         with:
           mode: 'test'
           majorMinorPatch: ${{ steps.gitversion.outputs.majorMinorPatch }}
-          token: ${{ secrets.RELEASE_GITHUB_TOKEN }}
+          token: ${{ steps.release-token.outputs.token }}
