ci(workflows): Skip npm scripts during install
Enhance security and stability by preventing execution of lifecycle scripts during dependency installation in CI/CD.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
           token: ${{ steps.app-token.outputs.token }}
 
       - run: |
-          npm install
+          npm install --ignore-scripts
           npm run build:tools
           npm run build:agent:github
           npm run build:agent:azure
