--- a/.azure/ci.yml
+++ b/.azure/ci.yml
@@ -45,7 +45,7 @@ jobs:
       displayName: Checkout
       fetchDepth: '0'
     - pwsh: |
-        npm install
+        npm install --ignore-scripts
       displayName: 'Install dependencies'
     - pwsh: |
         npm run lint:check && npm run format:check && npm run mdlint:check
