ci(workflows): Migrate to official GitHub App token action
Replaces custom token generation actions with `actions/create-github-app-token@v2` and explicitly defines required permissions.

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -21,10 +21,15 @@ jobs:
 
       - name: Generate GitHub App Token
         id: app-token
-        uses: ./.github/actions/create-push-token
+        uses: actions/create-github-app-token@v2
         with:
           app-id: ${{ secrets.GITTOOLS_BOT_APP_ID }}
           private-key: ${{ secrets.GITTOOLS_BOT_APP_PRIVATE_KEY }}
+          permission-actions: write
+          permission-contents: write
+          permission-workflows: write
+          permission-members: read
+          permission-metadata: read
 
       - uses: actions/checkout@v6
         with:
@@ -59,10 +64,14 @@ jobs:
 
       - name: Generate GitHub App Release Token
         id: release-token
-        uses: ./.github/actions/create-release-token
+        uses: actions/create-github-app-token@v2
         with:
           app-id: ${{ secrets.GITTOOLS_BOT_APP_ID }}
           private-key: ${{ secrets.GITTOOLS_BOT_APP_PRIVATE_KEY }}
+          permission-actions: write
+          permission-contents: write
+          permission-workflows: write
+          permission-packages: write
 
       - name: Trigger Update Examples version (actions-test)
         id: get-tags
