--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,95 +31,103 @@ jobs:
         os: [ windows-2025, ubuntu-24.04, macos-26 ]
       fail-fast: false
     steps:
-    - name: Generate GitHub App Token
-      id: app-token
-      uses: ./.github/actions/create-push-token
-      with:
-        app-id: ${{ secrets.GITTOOLS_BOT_APP_ID }}
-        private-key: ${{ secrets.GITTOOLS_BOT_APP_PRIVATE_KEY }}
-    - uses: actions/checkout@v6
-      if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
-      with:
-        fetch-depth: 0
-        token: ${{ steps.app-token.outputs.token }}
-    - uses: actions/checkout@v6
-      if: github.event_name == 'pull_request'
-      with:
-        fetch-depth: 0
-    - run: |
-        npm install --ignore-scripts
-      name: Install dependencies
-    - run: |
-        npm run lint:check && npm run format:check && npm run mdlint:check
-      name: Check code formatting
-    - run: |
-        npm run build:tools
-        npm run build:agent:github
-        npm run build:agent:azure
-      name: Build code
-    - run: |
-        npm run test:ci
-      name: Run tests
-    - name: Test Summary
-      uses: test-summary/action@v2.4
-      if: always()
-      with:
-        paths: junit-report.xml
-    - name: gitversion/setup
-      uses: ./gitversion/setup
-      with:
-        versionSpec: '6.6.x'
-        nugetConfigPath: '${{ github.workspace }}/nuget.config'
-    - name: gitversion/command (showvariable)
-      uses: ./gitversion/command
-      with:
-        targetPath: './'
-        arguments: '/showvariable FullSemVer'
-    - name: gitversion/command (format)
-      uses: ./gitversion/command
-      with:
-        targetPath: './'
-        arguments: '/format {Major}.{Minor}'
-    - name: gitversion/execute
-      id: gitversion # step id used as a reference for output values
-      uses: ./gitversion/execute
-      with:
-        targetPath: './'
-        disableCache: true
-        disableNormalization: false
-        overrideConfig: |
-          semantic-version-format=Loose
-    - run: |
-        echo "Major      (env.major)                                      : ${{ env.major }}"
-        echo "Major      (env.GitVersion_Major)                           : ${{ env.GitVersion_Major }}"
-        echo "Major      (steps.gitversion.outputs.major)                 : ${{ steps.gitversion.outputs.major }}"
-        echo "Major      (steps.gitversion.outputs.GitVersion_Major)      : ${{ steps.gitversion.outputs.GitVersion_Major }}"
 
-        echo "Minor      (env.minor)                                      : ${{ env.minor }}"
-        echo "Minor      (env.GitVersion_Minor)                           : ${{ env.GitVersion_Minor }}"
-        echo "Minor      (steps.gitversion.outputs.minor)                 : ${{ steps.gitversion.outputs.minor }}"
-        echo "Minor      (steps.gitversion.outputs.GitVersion_Minor)      : ${{ steps.gitversion.outputs.GitVersion_Minor }}"
+      - name: Generate GitHub App Token
+        id: app-token
+        uses: actions/create-github-app-token@v2
+        with:
+          app-id: ${{ secrets.GITTOOLS_BOT_APP_ID }}
+          private-key: ${{ secrets.GITTOOLS_BOT_APP_PRIVATE_KEY }}
+          permission-actions: write
+          permission-contents: write
+          permission-workflows: write
+          permission-members: read
+          permission-metadata: read
 
-        echo "Patch      (env.patch)                                      : ${{ env.patch }}"
-        echo "Patch      (env.GitVersion_Patch)                           : ${{ env.GitVersion_Patch }}"
-        echo "Patch      (steps.gitversion.outputs.patch)                 : ${{ steps.gitversion.outputs.patch }}"
-        echo "Patch      (steps.gitversion.outputs.GitVersion_Patch)      : ${{ steps.gitversion.outputs.GitVersion_Patch }}"
+      - uses: actions/checkout@v6
+        if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+        with:
+          fetch-depth: 0
+          token: ${{ steps.app-token.outputs.token }}
 
-        echo "FullSemVer (env.fullSemVer)                                 : ${{ env.fullSemVer }}"
-        echo "FullSemVer (env.GitVersion_FullSemVer)                      : ${{ env.GitVersion_FullSemVer }}"
-        echo "FullSemVer (steps.gitversion.outputs.fullSemVer)            : ${{ steps.gitversion.outputs.fullSemVer }}"
-        echo "FullSemVer (steps.gitversion.outputs.GitVersion_FullSemVer) : ${{ steps.gitversion.outputs.GitVersion_FullSemVer }}"
-      name: Use variables and output
-    - name: Check for changes
-      if: matrix.os == 'ubuntu-24.04' && github.event_name == 'push'
-      id: status
-      run: |
-        if ($null -ne (git status --porcelain)) { echo "has_changes=1"; echo "has_changes=1" >> $env:GITHUB_OUTPUT }
-    - name: Rebuild dist and push
-      run: |
-        git add --verbose .
-        git config user.name 'gittools-bot'
-        git config user.email 'gittoolsbot@outlook.com'
-        git commit -m 'dist update' --allow-empty
-        git push --force
-      if: steps.status.outputs.has_changes == '1'
+      - uses: actions/checkout@v6
+        if: github.event_name == 'pull_request'
+        with:
+          fetch-depth: 0
+      - run: |
+          npm install --ignore-scripts
+        name: Install dependencies
+      - run: |
+          npm run lint:check && npm run format:check && npm run mdlint:check
+        name: Check code formatting
+      - run: |
+          npm run build:tools
+          npm run build:agent:github
+          npm run build:agent:azure
+        name: Build code
+      - run: |
+          npm run test:ci
+        name: Run tests
+      - name: Test Summary
+        uses: test-summary/action@v2.4
+        if: always()
+        with:
+          paths: junit-report.xml
+      - name: gitversion/setup
+        uses: ./gitversion/setup
+        with:
+          versionSpec: '6.6.x'
+          nugetConfigPath: '${{ github.workspace }}/nuget.config'
+      - name: gitversion/command (showvariable)
+        uses: ./gitversion/command
+        with:
+          targetPath: './'
+          arguments: '/showvariable FullSemVer'
+      - name: gitversion/command (format)
+        uses: ./gitversion/command
+        with:
+          targetPath: './'
+          arguments: '/format {Major}.{Minor}'
+      - name: gitversion/execute
+        id: gitversion # step id used as a reference for output values
+        uses: ./gitversion/execute
+        with:
+          targetPath: './'
+          disableCache: true
+          disableNormalization: false
+          overrideConfig: |
+            semantic-version-format=Loose
+      - run: |
+          echo "Major      (env.major)                                      : ${{ env.major }}"
+          echo "Major      (env.GitVersion_Major)                           : ${{ env.GitVersion_Major }}"
+          echo "Major      (steps.gitversion.outputs.major)                 : ${{ steps.gitversion.outputs.major }}"
+          echo "Major      (steps.gitversion.outputs.GitVersion_Major)      : ${{ steps.gitversion.outputs.GitVersion_Major }}"
+
+          echo "Minor      (env.minor)                                      : ${{ env.minor }}"
+          echo "Minor      (env.GitVersion_Minor)                           : ${{ env.GitVersion_Minor }}"
+          echo "Minor      (steps.gitversion.outputs.minor)                 : ${{ steps.gitversion.outputs.minor }}"
+          echo "Minor      (steps.gitversion.outputs.GitVersion_Minor)      : ${{ steps.gitversion.outputs.GitVersion_Minor }}"
+
+          echo "Patch      (env.patch)                                      : ${{ env.patch }}"
+          echo "Patch      (env.GitVersion_Patch)                           : ${{ env.GitVersion_Patch }}"
+          echo "Patch      (steps.gitversion.outputs.patch)                 : ${{ steps.gitversion.outputs.patch }}"
+          echo "Patch      (steps.gitversion.outputs.GitVersion_Patch)      : ${{ steps.gitversion.outputs.GitVersion_Patch }}"
+
+          echo "FullSemVer (env.fullSemVer)                                 : ${{ env.fullSemVer }}"
+          echo "FullSemVer (env.GitVersion_FullSemVer)                      : ${{ env.GitVersion_FullSemVer }}"
+          echo "FullSemVer (steps.gitversion.outputs.fullSemVer)            : ${{ steps.gitversion.outputs.fullSemVer }}"
+          echo "FullSemVer (steps.gitversion.outputs.GitVersion_FullSemVer) : ${{ steps.gitversion.outputs.GitVersion_FullSemVer }}"
+        name: Use variables and output
+      - name: Check for changes
+        if: matrix.os == 'ubuntu-24.04' && github.event_name == 'push'
+        id: status
+        run: |
+          if ($null -ne (git status --porcelain)) { echo "has_changes=1"; echo "has_changes=1" >> $env:GITHUB_OUTPUT }
+      - name: Rebuild dist and push
+        run: |
+          git add --verbose .
+          git config user.name 'gittools-bot'
+          git config user.email 'gittoolsbot@outlook.com'
+          git commit -m 'dist update' --allow-empty
+          git push --force
+        if: steps.status.outputs.has_changes == '1'
