--- a/.github/workflows/examples-version.yml
+++ b/.github/workflows/examples-version.yml
@@ -19,10 +19,15 @@ jobs:
 
       - name: Generate GitHub App Token
         id: app-token
-        uses: ./.github/actions/create-push-token
+        uses: actions/create-github-app-token@v2
         with:
           app-id: ${{ secrets.GITTOOLS_BOT_APP_ID }}
           private-key: ${{ secrets.GITTOOLS_BOT_APP_PRIVATE_KEY }}
+          permission-actions: write
+          permission-contents: write
+          permission-workflows: write
+          permission-members: read
+          permission-metadata: read
 
       - uses: actions/checkout@v6
         with:
