--- a/.github/workflows/gitversion-published.yml
+++ b/.github/workflows/gitversion-published.yml
@@ -17,12 +17,22 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
 
+      - name: Load secrets from 1Password
+        id: op-load-secret
+        uses: 1password/load-secrets-action@v3
+        with:
+          export-env: false
+        env:
+          OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
+          gh_app_id: op://cicd/actions/gittools_actions/gh_app_id
+          gh_app_private_key: op://cicd/actions/gittools_actions/gh_app_private_key.pem
+
       - name: Generate GitHub App Token
         id: app-token
         uses: actions/create-github-app-token@v2
         with:
-          app-id: ${{ secrets.GITTOOLS_BOT_APP_ID }}
-          private-key: ${{ secrets.GITTOOLS_BOT_APP_PRIVATE_KEY }}
+          app-id: ${{ steps.op-load-secret.outputs.gh_app_id }}
+          private-key: ${{ steps.op-load-secret.outputs.gh_app_private_key }}
           permission-actions: write
           permission-contents: write
           permission-workflows: write
